--- a/page2.html
+++ b/page2.html
@@ -28,12 +28,14 @@
 </head>
 <body> 
 
-<!-- bloc-0 -->
+<!-- bloc-0 : header-->
 <header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
+
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" /></a>
+				<!-- suppression des div keywords-->
+				<a class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence web La Panthère, création de site web design, page contact" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -41,19 +43,17 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html" alt="Page accueil, Explorer nos différentes réalisations dans les domaines du web design, de l'identité visuelle, de la stratégie webmarketing...">Accueil</a>
 					</li>
 					<li>
-					</li>
-					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 	</div>
 </header>
-<!-- bloc-0 END -->
+<!-- bloc-0 : header END -->
 
 <!-- Principal conteneur -->
 <main class="page-container">
