--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index,follow">
 	<meta name="googlebot" content="index,follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">   
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
@@ -35,7 +35,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<!-- suppression des div keywords-->
-				<a class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence web La Panthère, création de site web design, page contact" height="40" /></a>
+				<a class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence web La Panthère, création de site web design" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -44,6 +44,7 @@
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html" alt="Page accueil, Explorer nos différentes réalisations dans les domaines du web design, de l'identité visuelle, de la stratégie webmarketing...">Accueil</a>
+
 					</li>
 					<li>
 						<a href="page2.html">Contact</a>
