--- a/page2.html
+++ b/page2.html
@@ -8,17 +8,17 @@
 	<meta name="googlebot" content="index,follow">
 
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-    <script src="./js/blocs.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/formHandler.js"></script>
-	<script src="./js/gmaps.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
+	<script src="./js/jqBootstrapValidation.js"></script>
+	<script src="./js/formHandler.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 
 
@@ -35,11 +35,9 @@
 <!-- bloc-0 : header-->
 <header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
-
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<!-- suppression des div keywords-->
-				<a class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence web La Panthère, création de site web design" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence web La Panthère, création de site web design" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -48,7 +46,6 @@
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html" alt="Page accueil, Explorer nos différentes réalisations dans les domaines du web design, de l'identité visuelle, de la stratégie webmarketing...">Accueil</a>
-
 					</li>
 					<li>
 						<a href="page2.html">Contact</a>
@@ -83,6 +80,7 @@
 
 <!-- bloc-7 -->
 <div class="bloc bgc-white l-bloc" id="bloc-7">
+	<h2>Formulaire de contact</h2>
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
