--- a/index.html
+++ b/index.html
@@ -155,13 +155,14 @@ Et adaptons une stratégie marketing, non seulement digitale mais aussi un desig
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
 				<h2 class="mg-md text-center tc-white">
-					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients<br>
 				</h2>
 				<p class="text-center white">
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
+		
 	</div>
 </div>
 <!-- bloc-3-what-i-do END -->
@@ -172,7 +173,7 @@ Et adaptons une stratégie marketing, non seulement digitale mais aussi un desig
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2>
-					Nous travaillons avec beaucoup de clients,<br>
+					Nous travaillons avec beaucoup de clients, <br>
 					voici nos réalisations.
 				</h2>
 			</div>
