--- a/page2.html
+++ b/page2.html
@@ -81,6 +81,7 @@
 <!-- bloc-7 -->
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<h2>Formulaire de contact</h2>
+	
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
@@ -136,9 +137,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<h2 class="text-center white">
 					Agence La Panthère - Agence web basée à Lyon.<br>
-				</p>
+				</h2>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
@@ -160,7 +161,7 @@
 							<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+				
 				</div>
 				<!--suppression des liens inutiles -->
 			</div>
