--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="logo de l'agence web La Panthère, création de site, design, logo, webdesign, SEO" />
+				<img src="img/logo.png" class="center-block image-resize-mode" alt="logo de l'agence web La Panthère, création de site, design, logo, webdesign, SEO" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La Panthère, une agence digitale<br>
 					à votre écoute !
