--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="robots" content="index,follow">
 	<meta name="googlebot" content="index,follow">
 	
-	<link rel="shortcut icon" type="image/png" href="img\favicon.png">
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -46,10 +46,10 @@
 				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 					<ul class="site-navigation nav navbar-nav">
 						<li>
-							<a href="index.html" alt="Vous êtes sur la page d'accueil du site internet de l'agence La Panthère">Accueil</a>
+							<a href="index.html">Accueil</a>
 						</li>
 						<li>
-							<a href="page2.html" alt="Vous voulez entrer ou faire évoluer votre entreprise vers la communication digitale ou tout simplement souhaitez échanger sur une future collaboration ? Contactez-nous !">Contact</a>
+							<a href="page2.html">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -72,7 +72,7 @@
 					à votre écoute !
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" alt="Allez sur la page contact" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -141,7 +141,7 @@ Et adaptons une stratégie marketing, non seulement digitale mais aussi un desig
 							Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. 
 							Cela nous a aidé à doubler nos ventes en lignes à Lyon."</p>
 					</blockquote>
-					<figcaption>Maxime Guibard, PDG de À vos fourchettes</cite></figcaption>
+					<figcaption>Maxime Guibard, PDG de À vos fourchettes</figcaption>
 				</figure>
 			</div>
 		</div>
@@ -158,7 +158,7 @@ Et adaptons une stratégie marketing, non seulement digitale mais aussi un desig
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients<br>
 				</h2>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html" alt="Allez sur la page contact">Contactez notre équipe</a><br>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
@@ -230,14 +230,14 @@ Et adaptons une stratégie marketing, non seulement digitale mais aussi un desig
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" alt="Allez sur la page contact">Contact</a>
+				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
 </div>
 <!-- bloc-5-cta END -->
 <!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up" alt="Vers le haut de la page"></span></a>
+<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
 </main>
 <!-- Principal conteneur : main END -->
