--- a/page2.html
+++ b/page2.html
@@ -45,10 +45,10 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html" alt="Retour sur la page accueil, Explorer nos différentes réalisations dans les domaines du web design, de l'identité visuelle, de la stratégie webmarketing...">Accueil</a>
+						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="page2.html" alt="Vous êtes sur la pge contact">Contact</a>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -91,25 +91,25 @@ Contactez-nous !
 			<div class="col-sm-6">
 				<fieldset>
 					<legend>Un nouveau projet ? Compléter le formulaire.</legend>
-				<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Il semble que notre serveur de messagerie ne réponde pas, Désolé pour le dérangement !">
+				<form id="form_1" novalidate>
 					<div class="form-group">
 						<label for="name">Nom *</label>
 						<input type="text" name="name" data-displayname="name" class="form-control" id="name"
-						aria-required="true" for="name">
+						aria-required="true">
 					</div>
-					<div class="form-group" id="email">
-						<label label for="email">
+					<div class="form-group">
+						<label for="email">
 							Adresse email *
 						</label>
 						<input type="email" name="email" data-displayname="email" class="form-control" id="email"
-						aria-required="true" for="email">
+						aria-required="true">
 					</div>
 					<div class="form-group">
 						<label for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
 						<input type="text" name="input_504" data-displayname="input_504" class="form-control" id="input_504"
-						aria-required="true" for="input_504">
+						aria-required="true">
 					</div>
 					<div class="form-group">
 						<label for="message">
@@ -118,7 +118,7 @@ Contactez-nous !
 					
 						
 						<textarea name="message" data-displayname="message" class="form-control" id="message"
-						aria-required="true" for="message" rows="4" cols="50"></textarea>
+						aria-required="true" rows="4" cols="50"></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -130,7 +130,7 @@ Contactez-nous !
 			<div class="col-sm-6">
 				<h2>Nous contacter</h2>
 				<p>
-					<a href="mailto:contact@agencelapanthere.com" alt="Pour d'autres questions, contactez nous par mail">contact@agencelapanthere.com</a>
+					<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a>
 					<br>
 					2 place Sathonay 69001 Lyon<br>
 					Ouvert de 9h à 18h, du lundi au vendredi<br>
@@ -142,7 +142,7 @@ Contactez-nous !
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up" alt="Vers le haut de la page"></span></a>
+<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
 
 </main>
