corrections et ajout de google analytics

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <title>La panthère, Agence communication digitale lyon</title>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JJ5GRF92Z1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JJ5GRF92Z1');
+</script>
 <meta name="google-site-verification" content="SppWNmY7FINDhfZGqxmpyOFQM-WsIaItkQ0UbYkJ3UY" />
 <!-- Analytics END -->
     
@@ -115,7 +124,7 @@
 				<p class="text-center ">
 					
 Nous vous proposons une analyse complète de vos besoins afin de comprendre au mieux vos objectifs commerciaux. 
-Et adaptons une stratégie marketing, non seulement digitale mais aussi un design personnalisé à votre image..
+Et adaptons une stratégie marketing, non seulement digitale mais aussi un design personnalisé à votre image.
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -200,7 +209,7 @@ Et adaptons une stratégie marketing, non seulement digitale mais aussi un desig
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Technologies diverses dediées à la photo et la vidéo, le sac à dos high-tech du nouveau voyageur"/></a>
+				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Technologies diverses dédiées à la photo et la vidéo, le sac à dos high-tech du nouveau voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -209,7 +218,7 @@ Et adaptons une stratégie marketing, non seulement digitale mais aussi un desig
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Pc portable, tablette papier cadeau et rubans, organistion d'évènement autour d'un café " /></a>
+				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Pc portable, tablette papier cadeau et rubans, organisation d'évènement autour d'un café " /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
