--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,16 @@
 
     
 <!-- Analytics -->
- 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JJ5GRF92Z1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JJ5GRF92Z1');
+</script>
+<meta name="google-site-verification" content="SppWNmY7FINDhfZGqxmpyOFQM-WsIaItkQ0UbYkJ3UY" />
 <!-- Analytics END -->
     
 </head>
